--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,17 +10,23 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=app,hooks,public
 sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/.next/**,**/coverage/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 
+# Coverage reports (if you have coverage)
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
 # TypeScript/JavaScript files
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # SonarQube server configuration
 sonar.host.url=http://localhost:9000
-sonar.login=TU_TOKEN
+sonar.login=sqp_716ca86943587063d161008c4220adb4e671ccf2
+sonar.qualitygate.wait=true
 
 # Additional configuration for Next.js
 sonar.typescript.tsconfigPath=tsconfig.json
-sonar.javascript.file.suffixes=.js,.jsx,.ts,.tsx
+sonar.typescript.file.suffixes=.ts,.tsx
+sonar.javascript.file.suffixes=.js,.jsx
 
 # Coverage exclusions
 sonar.coverage.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/.next/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx,**/coverage/**
