Update SonarQube project properties
Changed project key and name to 'Front', and updated the SonarQube login token in sonar-project.properties for new project configuration.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarQube configuration for DrimSoft UI project
-sonar.projectKey=drimsoft-ui
-sonar.projectName=DrimSoft UI
+sonar.projectKey=Front
+sonar.projectName=Front
 sonar.projectVersion=1.0.0
 
 # Source encoding
@@ -20,7 +20,7 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # SonarQube server configuration
 sonar.host.url=http://localhost:9000
-sonar.login=sqp_716ca86943587063d161008c4220adb4e671ccf2
+sonar.login=sonar.login=sqp_903b72156c68a45e52565a576e139ab0baae13b1
 sonar.qualitygate.wait=true
 
 # Additional configuration for Next.js
