Fix duplicate sonar.login property in config
Removed redundant 'sonar.login=' prefix in the sonar-project.properties file to correct the SonarQube authentication configuration.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # SonarQube server configuration
 sonar.host.url=http://localhost:9000
-sonar.login=sonar.login=sqp_903b72156c68a45e52565a576e139ab0baae13b1
+sonar.login=sqp_903b72156c68a45e52565a576e139ab0baae13b1
 sonar.qualitygate.wait=true
 
 # Additional configuration for Next.js
